tests/snapshots/cpp_indent_char_budgets__cpp_chars_120.snap
---
source: tests/cpp_indent_char_budgets.rs
expression: s
---
// A…

  pub…
pu…
p…
…
          …

          { … }

        …
          …


      …
…
          …

          { … }


…
