tests/snapshots/cpp_indent_char_budgets__cpp_chars_240.snap
---
source: tests/cpp_indent_char_budgets.rs
expression: s
---
// A s…

  publi…
publ…
pub…
pu…
p…
…
            …

            { … }

          …
            …


        pu…
…
            …

            { … }


      pub…
pu…
…
            …

            { … }

          …
            …



…
