tests/snapshots/cpp_indent_char_budgets__cpp_chars_480.snap
---
source: tests/cpp_indent_char_budgets.rs
expression: s
---
// A sm…

  public…
publi…
publ…
pub…
pu…
p…
…
                …

                { … }

              { … }

            …
              …


          pu…
…
              …

              { … }


        pub…
pu…
…
              …

              { … }

            …
              …



      publ…
pub…
pu…
…
              …

              { … }

            …
              …


          pu…
…
              …

              { … }



…
